<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:layout_gravity="center_horizontal" android:orientation="horizontal" android:id="@id/game_menu_toggles" android:layout_width="@dimen/game_menu_contents_width" android:layout_height="@dimen/game_menu_toggle_height" android:paddingStart="@dimen/game_menu_toggle_horizontal_padding" android:paddingEnd="@dimen/game_menu_toggle_horizontal_padding">
        <com.google.android.systemui.gamedashboard.GameDashboardButton android:id="@id/game_menu_screenshot" android:layout_width="56.0dip" android:layout_height="56.0dip" android:src="@drawable/ic_screenshot" android:scaleType="center" android:contentDescription="@string/accessibility_game_dashboard_screenshot_toggle" />
        <Space android:layout_width="0.0dip" android:layout_height="1.0dip" android:layout_weight="1.0" />
        <com.google.android.systemui.gamedashboard.GameDashboardButton android:id="@id/game_menu_screen_record" android:layout_width="56.0dip" android:layout_height="56.0dip" android:src="@drawable/ic_screen_record" android:scaleType="center" android:contentDescription="@string/accessibility_game_dashboard_screen_record_toggle" />
        <Space android:layout_width="0.0dip" android:layout_height="1.0dip" android:layout_weight="1.0" />
        <com.google.android.systemui.gamedashboard.GameDashboardButton android:id="@id/game_menu_fps" android:layout_width="56.0dip" android:layout_height="56.0dip" android:src="@drawable/ic_fps" android:scaleType="center" android:contentDescription="@string/accessibility_game_dashboard_fps_toggle" />
        <Space android:layout_width="0.0dip" android:layout_height="1.0dip" android:layout_weight="1.0" />
        <com.google.android.systemui.gamedashboard.GameDashboardButton android:id="@id/game_menu_dnd" android:layout_width="56.0dip" android:layout_height="56.0dip" android:src="@drawable/ic_dnd" android:scaleType="center" android:contentDescription="@string/accessibility_game_dashboard_dnd_toggle" />
    </LinearLayout>
    <include android:id="@id/game_menu_widgets" layout="@layout/game_menu_widgets" />
</LinearLayout>