<?xml version="1.0" encoding="utf-8"?>
<com.google.android.systemui.gamedashboard.ShortcutBarView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.google.android.systemui.gamedashboard.ShortcutBarContainer android:orientation="vertical" android:id="@id/bar" android:layout_width="48.0dip" android:layout_height="wrap_content">
        <LinearLayout android:orientation="horizontal" android:id="@id/reveal" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <ImageView android:id="@id/reveal_left" android:layout_width="@dimen/game_dashboard_shortcut_bar_reveal_button_size" android:layout_height="48.0dip" android:src="@drawable/ic_wide_arrow_left" android:tint="?android:textColorPrimaryInverse" android:contentDescription="@string/accessibility_game_dashboard_shortcut_bar_undock" />
            <ImageView android:id="@id/reveal_right" android:layout_width="@dimen/game_dashboard_shortcut_bar_reveal_button_size" android:layout_height="48.0dip" android:src="@drawable/ic_wide_arrow_right" android:tint="?android:textColorPrimaryInverse" android:contentDescription="@string/accessibility_game_dashboard_shortcut_bar_undock" />
        </LinearLayout>
        <ImageView android:id="@id/screenshot" android:background="@drawable/game_dashboard_button_background" android:padding="8.0dip" android:visibility="gone" android:layout_width="36.0dip" android:layout_height="36.0dip" android:layout_margin="6.0dip" android:src="@drawable/ic_screenshot" android:scaleType="centerInside" android:tint="?android:textColorPrimaryInverse" android:contentDescription="@string/accessibility_game_dashboard_shortcut_bar_screenshot" android:backgroundTint="?android:textColorPrimary" />
        <ImageView android:id="@id/record" android:background="@drawable/game_dashboard_button_background" android:padding="8.0dip" android:visibility="gone" android:layout_width="36.0dip" android:layout_height="36.0dip" android:layout_margin="6.0dip" android:src="@drawable/ic_screen_record" android:scaleType="centerInside" android:tint="?android:textColorPrimaryInverse" android:contentDescription="@string/accessibility_game_dashboard_shortcut_bar_record" android:backgroundTint="?android:textColorPrimary" />
        <TextView android:textSize="16.0sp" android:textColor="?android:textColorPrimaryInverse" android:gravity="center" android:id="@id/fps" android:background="@drawable/game_dashboard_button_background" android:visibility="gone" android:layout_width="36.0dip" android:layout_height="36.0dip" android:layout_margin="6.0dip" android:contentDescription="@string/accessibility_game_dashboard_shortcut_bar_fps" android:backgroundTint="?android:textColorPrimary" />
    </com.google.android.systemui.gamedashboard.ShortcutBarContainer>
</com.google.android.systemui.gamedashboard.ShortcutBarView>