<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:gravity="center" android:clipChildren="false" android:clipToPadding="false" android:layout_width="wrap_content" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout android:orientation="vertical" android:id="@id/volume_drawer_container" android:background="@drawable/volume_drawer_bg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:alpha="0.0">
        <FrameLayout android:layout_gravity="bottom|center|right" android:id="@id/volume_drawer_selection_background" android:background="@drawable/volume_drawer_selection_bg" android:layout_width="@dimen/volume_ringer_drawer_item_size" android:layout_height="@dimen/volume_ringer_drawer_item_size" android:alpha="0.0" />
        <LinearLayout android:orientation="vertical" android:id="@id/volume_drawer_options" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <FrameLayout android:description="@string/volume_ringer_hint_vibrate" android:gravity="center" android:id="@id/volume_drawer_vibrate" android:layout_width="@dimen/volume_ringer_drawer_item_size" android:layout_height="@dimen/volume_ringer_drawer_item_size">
                <ImageView android:layout_gravity="center" android:id="@id/volume_drawer_vibrate_icon" android:layout_width="@dimen/volume_ringer_drawer_icon_size" android:layout_height="@dimen/volume_ringer_drawer_icon_size" android:src="@drawable/ic_volume_ringer_vibrate" android:tint="?android:textColorPrimary" />
            </FrameLayout>
            <FrameLayout android:description="@string/volume_ringer_hint_mute" android:gravity="center" android:id="@id/volume_drawer_mute" android:layout_width="@dimen/volume_ringer_drawer_item_size" android:layout_height="@dimen/volume_ringer_drawer_item_size">
                <ImageView android:layout_gravity="center" android:id="@id/volume_drawer_mute_icon" android:layout_width="@dimen/volume_ringer_drawer_icon_size" android:layout_height="@dimen/volume_ringer_drawer_icon_size" android:src="@drawable/ic_volume_ringer_mute" android:tint="?android:textColorPrimary" />
            </FrameLayout>
            <FrameLayout android:description="@string/volume_ringer_hint_unmute" android:gravity="center" android:id="@id/volume_drawer_normal" android:layout_width="@dimen/volume_ringer_drawer_item_size" android:layout_height="@dimen/volume_ringer_drawer_item_size">
                <ImageView android:layout_gravity="center" android:id="@id/volume_drawer_normal_icon" android:layout_width="@dimen/volume_ringer_drawer_icon_size" android:layout_height="@dimen/volume_ringer_drawer_icon_size" android:src="@drawable/ic_volume_ringer" android:tint="?android:textColorPrimary" />
            </FrameLayout>
        </LinearLayout>
    </FrameLayout>
    <FrameLayout android:description="@string/volume_ringer_change" android:layout_gravity="bottom|center|right" android:id="@id/volume_new_ringer_active_icon_container" android:background="@drawable/volume_drawer_selection_bg" android:layout_width="@dimen/volume_ringer_drawer_item_size" android:layout_height="@dimen/volume_ringer_drawer_item_size">
        <ImageView android:layout_gravity="center" android:id="@id/volume_new_ringer_active_icon" android:layout_width="@dimen/volume_ringer_drawer_icon_size" android:layout_height="@dimen/volume_ringer_drawer_icon_size" android:src="@drawable/ic_volume_media" android:tint="?android:textColorPrimaryInverse" />
    </FrameLayout>
</FrameLayout>