<?xml version="1.0" encoding="utf-8"?>
<com.android.systemui.util.animation.TransitionLayout android:theme="@style/MediaPlayer" android:id="@id/media_recommendations" android:background="@drawable/qs_media_background" android:clipChildren="false" android:clipToPadding="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="@dimen/qs_media_padding" android:paddingEnd="@dimen/qs_media_padding" android:forceHasOverlappingRendering="false"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/media_vertical_start_guideline" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.25" />
    <androidx.constraintlayout.widget.Guideline android:orientation="horizontal" android:id="@id/media_horizontal_center_guideline" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.5" />
    <com.android.internal.widget.CachingIconView android:id="@id/recommendation_card_icon" android:layout_width="@dimen/qs_aa_media_rec_header_icon_size" android:layout_height="@dimen/qs_aa_media_rec_header_icon_size" android:src="@drawable/ic_headset" android:tint="?android:textColor" />
    <TextView android:textSize="@dimen/qq_aa_media_rec_header_text_size" android:id="@id/recommendation_card_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/controls_media_smartspace_rec_title" android:singleLine="true" android:fontFamily="google-sans-medium" android:textDirection="locale" />
    <ImageView android:id="@id/media_cover1" android:background="@drawable/bg_smartspace_media_item" android:layout_width="@dimen/qs_aa_media_rec_album_size" android:layout_height="@dimen/qs_aa_media_rec_album_size" android:scaleType="centerCrop" android:adjustViewBounds="true" android:clipToOutline="true" style="@style/MediaPlayer.Album" />
    <com.android.internal.widget.CachingIconView android:id="@id/media_logo1" android:layout_width="@dimen/qs_media_icon_size" android:layout_height="@dimen/qs_media_icon_size" style="@style/MediaPlayer.AppIcon" />
    <ImageView android:id="@id/media_cover2" android:background="@drawable/bg_smartspace_media_item" android:layout_width="@dimen/qs_aa_media_rec_album_size" android:layout_height="@dimen/qs_aa_media_rec_album_size" android:scaleType="centerCrop" android:adjustViewBounds="true" android:clipToOutline="true" style="@style/MediaPlayer.Album" />
    <com.android.internal.widget.CachingIconView android:id="@id/media_logo2" android:layout_width="@dimen/qs_media_icon_size" android:layout_height="@dimen/qs_media_icon_size" style="@style/MediaPlayer.AppIcon" />
    <ImageView android:id="@id/media_cover3" android:background="@drawable/bg_smartspace_media_item" android:layout_width="@dimen/qs_aa_media_rec_album_size" android:layout_height="@dimen/qs_aa_media_rec_album_size" android:scaleType="centerCrop" android:adjustViewBounds="true" android:clipToOutline="true" style="@style/MediaPlayer.Album" />
    <com.android.internal.widget.CachingIconView android:id="@id/media_logo3" android:layout_width="@dimen/qs_media_icon_size" android:layout_height="@dimen/qs_media_icon_size" style="@style/MediaPlayer.AppIcon" />
    <ImageView android:id="@id/media_cover4" android:background="@drawable/bg_smartspace_media_item" android:layout_width="@dimen/qs_aa_media_rec_album_size" android:layout_height="@dimen/qs_aa_media_rec_album_size" android:scaleType="centerCrop" android:adjustViewBounds="true" android:clipToOutline="true" style="@style/MediaPlayer.Album" />
    <com.android.internal.widget.CachingIconView android:id="@id/media_logo4" android:layout_width="@dimen/qs_media_icon_size" android:layout_height="@dimen/qs_media_icon_size" style="@style/MediaPlayer.AppIcon" />
    <ImageView android:id="@id/media_cover5" android:background="@drawable/bg_smartspace_media_item" android:layout_width="@dimen/qs_aa_media_rec_album_size" android:layout_height="@dimen/qs_aa_media_rec_album_size" android:scaleType="centerCrop" android:adjustViewBounds="true" android:clipToOutline="true" style="@style/MediaPlayer.Album" />
    <com.android.internal.widget.CachingIconView android:id="@id/media_logo5" android:layout_width="@dimen/qs_media_icon_size" android:layout_height="@dimen/qs_media_icon_size" style="@style/MediaPlayer.AppIcon" />
    <ImageView android:id="@id/media_cover6" android:background="@drawable/bg_smartspace_media_item" android:layout_width="@dimen/qs_aa_media_rec_album_size" android:layout_height="@dimen/qs_aa_media_rec_album_size" android:scaleType="centerCrop" android:adjustViewBounds="true" android:clipToOutline="true" style="@style/MediaPlayer.Album" />
    <com.android.internal.widget.CachingIconView android:id="@id/media_logo6" android:layout_width="@dimen/qs_media_icon_size" android:layout_height="@dimen/qs_media_icon_size" style="@style/MediaPlayer.AppIcon" />
    <TextView android:gravity="center|top" android:id="@id/remove_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/qs_media_padding" android:text="@string/controls_media_close_session" android:singleLine="true" android:fontFamily="@android:string/httpErrorFileNotFound" android:layout_marginStart="@dimen/qs_media_padding" android:layout_marginEnd="@dimen/qs_media_padding" app:layout_constraintBottom_toTopOf="@id/settings" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <FrameLayout android:id="@id/settings" android:background="@drawable/qs_media_light_source" android:paddingBottom="@dimen/qs_media_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="48.0dip" android:minHeight="48.0dip" android:layout_marginStart="@dimen/qs_media_padding" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/remove_text">
        <TextView android:layout_gravity="bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/controls_media_settings_button" style="@style/MediaPlayer.OutlineButton" />
    </FrameLayout>
    <FrameLayout android:id="@id/cancel" android:background="@drawable/qs_media_light_source" android:paddingBottom="@dimen/qs_media_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="48.0dip" android:minHeight="48.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@id/dismiss" app:layout_constraintTop_toBottomOf="@id/remove_text">
        <TextView android:layout_gravity="bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/cancel" style="@style/MediaPlayer.OutlineButton" />
    </FrameLayout>
    <FrameLayout android:id="@id/dismiss" android:background="@drawable/qs_media_light_source" android:paddingBottom="@dimen/qs_media_padding" android:layout_width="wrap_content" android:layout_height="wrap_content" android:minWidth="48.0dip" android:minHeight="48.0dip" android:layout_marginEnd="@dimen/qs_media_padding" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@id/remove_text">
        <TextView android:layout_gravity="bottom" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/controls_media_dismiss_button" style="@style/MediaPlayer.OutlineButton" />
    </FrameLayout>
</com.android.systemui.util.animation.TransitionLayout>